--- a/sass/components/_fullpage.scss
+++ b/sass/components/_fullpage.scss
@@ -10,25 +10,20 @@ html.fp-enabled, .fp-enabled body {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	/*Avoid flicker on slides transitions for mobile phones #336 */
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 #superContainer {
 	height: 100%;
 	position: relative;
-	/* Touch detection for Windows 8 */
 	-ms-touch-action: none;
-	/* IE 11 on Windows Phone 8.1*/
 	touch-action: none;
 }
 
 .fp-section {
 	position: relative;
 	-webkit-box-sizing: border-box;
-	/* Safari<=5 Android<=3 */
 	-moz-box-sizing: border-box;
-	/* <=28 */
 	box-sizing: border-box;
 }
 
@@ -47,11 +42,11 @@ html.fp-enabled, .fp-enabled body {
 	overflow: hidden;
 	position: relative;
 	-webkit-transition: all 0.3s ease-out;
-	/* Safari<=6 Android<=4.3 */
 	transition: all 0.3s ease-out;
 }
 
-.fp-section.fp-table, .fp-slide.fp-table {
+.fp-section.fp-table, 
+.fp-slide.fp-table {
 	display: table;
 	table-layout: fixed;
 	width: 100%;
@@ -59,7 +54,7 @@ html.fp-enabled, .fp-enabled body {
 
 .fp-tableCell {
 	display: table-cell;
-	vertical-align: middle;
+	/*vertical-align: middle;*/
 	width: 100%;
 	height: 100%;
 }
@@ -69,15 +64,15 @@ html.fp-enabled, .fp-enabled body {
 	position: relative;
 }
 
+
+/* Control Arrows
+------------------------------------*/
+
 .fp-controlArrow {
 	-webkit-user-select: none;
-	/* webkit (safari, chrome) browsers */
 	-moz-user-select: none;
-	/* mozilla browsers */
 	-khtml-user-select: none;
-	/* webkit (konqueror) browsers */
 	-ms-user-select: none;
-	/* IE10+ */
 	position: absolute;
 	z-index: 4;
 	top: 50%;
@@ -104,6 +99,10 @@ html.fp-enabled, .fp-enabled body {
 	border-color: transparent transparent transparent #fff;
 }
 
+
+/* Scrolling
+------------------------------------*/
+
 .fp-scrollable {
 	overflow: hidden;
 	position: relative;
@@ -121,6 +120,10 @@ html.fp-enabled, .fp-enabled body {
 	-webkit-transition: none !important;
 	transition: none !important;
 }
+
+
+/* Navigation
+------------------------------------*/
 
 #fp-nav {
 	position: fixed;
@@ -166,7 +169,7 @@ html.fp-enabled, .fp-enabled body {
 	display: block;
 	width: 14px;
 	height: 13px;
-	margin: 7px;
+	margin: 35px 25px;
 	position: relative;
 }
 
@@ -174,7 +177,8 @@ html.fp-enabled, .fp-enabled body {
 	display: inline-block;
 }
 
-#fp-nav ul li a, .fp-slidesNav ul li a {
+#fp-nav ul li a, 
+.fp-slidesNav ul li a {
 	display: block;
 	position: relative;
 	z-index: 1;
@@ -184,21 +188,26 @@ html.fp-enabled, .fp-enabled body {
 	text-decoration: none;
 }
 
-#fp-nav ul li a.active span, .fp-slidesNav ul li a.active span, #fp-nav ul li:hover a.active span, .fp-slidesNav ul li:hover a.active span {
+#fp-nav ul li a.active span, 
+.fp-slidesNav ul li a.active span, 
+#fp-nav ul li:hover a.active span, 
+.fp-slidesNav ul li:hover a.active span {
+	background: $red;
 	height: 12px;
 	width: 12px;
 	margin: -6px 0 0 -6px;
 	border-radius: 100%;
 }
 
-#fp-nav ul li a span, .fp-slidesNav ul li a span {
+#fp-nav ul li a span, 
+.fp-slidesNav ul li a span {
+	background: $white;
 	border-radius: 50%;
 	position: absolute;
 	z-index: 1;
-	height: 4px;
-	width: 4px;
+	height: 6px;
+	width: 6px;
 	border: 0;
-	background: #333;
 	left: 50%;
 	top: 50%;
 	margin: -2px 0 0 -2px;
@@ -208,28 +217,35 @@ html.fp-enabled, .fp-enabled body {
 	transition: all 0.1s ease-in-out;
 }
 
-#fp-nav ul li:hover a span, .fp-slidesNav ul li:hover a span {
+#fp-nav ul li:hover a span, 
+.fp-slidesNav ul li:hover a span {
+	background: $red;
 	width: 10px;
 	height: 10px;
 	margin: -5px 0px 0px -5px;
 }
 
+
+/* Tooltip
+------------------------------------*/
+
 #fp-nav ul li .fp-tooltip {
-	position: absolute;
-	top: -2px;
-	color: #fff;
+	color: $white;
 	font-size: 14px;
-	font-family: arial, helvetica, sans-serif;
+	font-weight: 700;
+	position: absolute;
+	top: -6px;
 	white-space: nowrap;
-	max-width: 220px;
-	overflow: hidden;
 	display: block;
-	opacity: 0;
-	width: 0;
 	cursor: pointer;
+	opacity: 0.5;
+	width: auto;
+	max-width: 220px;
+	text-transform: uppercase;
 }
 
-#fp-nav ul li:hover .fp-tooltip, #fp-nav.fp-show-active a.active+.fp-tooltip {
+#fp-nav ul li:hover .fp-tooltip, 
+#fp-nav.fp-show-active a.active+.fp-tooltip {
 	-webkit-transition: opacity 0.2s ease-in;
 	transition: opacity 0.2s ease-in;
 	width: auto;
@@ -244,10 +260,17 @@ html.fp-enabled, .fp-enabled body {
 	left: 20px;
 }
 
-.fp-auto-height.fp-section, .fp-auto-height .fp-slide, .fp-auto-height .fp-tableCell {
+/* Height
+------------------------------------*/
+
+.fp-auto-height.fp-section, 
+.fp-auto-height .fp-slide, .fp-auto-height .fp-tableCell {
 	height: auto !important;
 }
 
-.fp-responsive .fp-auto-height-responsive.fp-section, .fp-responsive .fp-auto-height-responsive .fp-slide, .fp-responsive .fp-auto-height-responsive .fp-tableCell {
+.fp-responsive .fp-auto-height-responsive.fp-section, 
+.fp-responsive .fp-auto-height-responsive .fp-slide, 
+.fp-responsive .fp-auto-height-responsive .fp-tableCell {
 	height: auto !important;
 }
+
