--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -24,6 +24,7 @@ h1 {
 	font-size: 50px;
 	line-height: 60px;
 	display: inline-block;
+	margin-bottom: 25px;
 	padding-bottom: 10px;
 	border-bottom: 6px solid $red;
 }
@@ -36,8 +37,8 @@ h2 {
 a {
 	outline: none;
 	@include transition-property(all);
-	@include transition-duration(0.2s);
-	@include transition-timing-function(ease-in-out);
+	@include transition-duration(0.1s);
+	@include transition-timing-function(ease-in);
 }
 
 strong {
@@ -66,17 +67,64 @@ strong {
 ------------------------------------*/
 
 .section-header {
+	padding-top: 10%;
 	text-align: center;
+}
+
+.section-content {
+	padding: 30px 15px;
+	z-index: 10;
+
+	p {
+		margin-bottom: 20px;
+	}
+
+	a { 
+		color: $white;
+	}
+
+	.button {
+		font-size: 14px;
+		font-weight: 700;
+		display: inline-block;
+		margin-top: 40px;
+		padding: 15px 35px;
+		border: 6px solid $white;
+
+		&:hover {
+			background: $white;
+			color: $grey-dark;
+		}
+	}
 }
 
 
 /* Intro
 ------------------------------------*/
 
-.intro-content {
+.intro {
 	background-image: url('../images/photos/road.jpg');
 	background-repeat: none;
 	background-size: cover;
+
+	h1 {
+		color: $white;
+		font-size: 43px;
+		line-height: 53px;
+		border-bottom: none;
+	}
+
+	.section-content {
+		padding-top: 20%;
+	}
+}
+
+.overlay {
+	background: rgba($grey-dark, 0.75);
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
 }
 
 
