--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -17,7 +17,6 @@ h1, h2, h3, h4 {
 	color: $red;
 	font-family: $header-font;
 	font-weight: 700;
-	text-transform: uppercase;
 }
 
 h1 {
@@ -26,10 +25,13 @@ h1 {
 	display: inline-block;
 	margin-bottom: 25px;
 	padding-bottom: 10px;
+	letter-spacing: 12px;
 	border-bottom: 6px solid $red;
+	text-transform: uppercase;
 }
 
 h2 {
+	color: $white;
 	font-size: 43px;
 	line-height: 53px;
 }
@@ -37,7 +39,7 @@ h2 {
 a {
 	outline: none;
 	@include transition-property(all);
-	@include transition-duration(0.1s);
+	@include transition-duration(0.2s);
 	@include transition-timing-function(ease-in);
 }
 
@@ -46,12 +48,8 @@ strong {
 }
 
 
-/* Layout
+/* Grid / Layout
 ------------------------------------*/
-
-.container {
-	position: relative;
-}
 
 .section-wrapper {
 	position: relative;
@@ -63,16 +61,60 @@ strong {
 }
 
 
+
+/* Header
+------------------------------------*/
+
+.site-logo {
+	text-align: right;
+	padding: 60px 0;
+	z-index: 10;
+
+	img {
+		max-width: 300px;
+	}
+}
+
+/* Hero
+------------------------------------*/
+
+.hero {
+	background-image: url('../images/photos/road.jpg');
+	background-repeat: none;
+	background-size: cover;
+}
+
+.hero-content {
+	padding-top: 8%;
+	z-index: 10;
+
+	h1 {
+		color: $white;
+		font-size: 43px;
+		line-height: 55px;
+		border-bottom: none;
+	}
+}
+
+.overlay {
+	background: rgba($grey-dark, 0.75);
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+}
+
+
 /* Content
 ------------------------------------*/
 
 .section-header {
 	padding-top: 10%;
-	text-align: center;
+
 }
 
 .section-content {
-	padding: 30px 15px;
+	padding: 60px 15px 30px;
 	z-index: 10;
 
 	p {
@@ -99,32 +141,67 @@ strong {
 }
 
 
-/* Intro
+/* Partners
 ------------------------------------*/
 
-.intro {
-	background-image: url('../images/photos/road.jpg');
-	background-repeat: none;
-	background-size: cover;
+.partners-list {
+	text-align: center;
 
-	h1 {
+	h2 {
 		color: $white;
-		font-size: 43px;
-		line-height: 53px;
-		border-bottom: none;
+		font-family: $body-font;
+		font-size: 18px;
+		line-height: 24px;
+		text-transform: none;
+		margin-bottom: 30px;
 	}
 
-	.section-content {
-		padding-top: 20%;
+	li {
+		margin-bottom: 30px;
+
+		&.last {
+			width: 100%;
+		}
+	}
+
+	img {
+		max-width: 180px;
+		display: inline-block;
+		vertical-align: middle;
 	}
 }
 
-.overlay {
-	background: rgba($grey-dark, 0.75);
-	position: absolute;
-	top: 0;
-	width: 100%;
-	height: 100%;
+
+/* Footer 
+------------------------------------*/
+
+.footer-wrapper {
+	background: $black;
+	color: $white;
+	padding: 8% 0 10%;
+}
+
+.footer-logo {
+
+	img {
+		max-width: 200px;
+	}	
+}
+
+.contact-info {
+	font-size: 16px;
+	font-weight: 700;
+	text-align: right;
+	margin-top: 60px;
+	text-transform: uppercase;
+
+	a {
+		color: $white;
+
+		&:hover {
+			text-decoration: underline;
+		}
+	}
 }
 
 
@@ -134,4 +211,3 @@ strong {
 .wow {
   visibility: hidden;
 }
-
