--- a/sass/components/_fullpage.scss
+++ b/sass/components/_fullpage.scss
@@ -129,100 +129,55 @@ html.fp-enabled, .fp-enabled body {
 	position: fixed;
 	z-index: 100;
 	margin-top: -32px;
-	top: 50%;
+	top: 48%;
 	opacity: 1;
 	-webkit-transform: translate3d(0, 0, 0);
-}
-
-#fp-nav.right {
-	right: 17px;
 }
 
 #fp-nav.left {
-	left: 17px;
+	left: 12%;
 }
 
-.fp-slidesNav {
-	position: absolute;
-	z-index: 4;
-	left: 50%;
-	opacity: 1;
-	-webkit-transform: translate3d(0, 0, 0);
-	-ms-transform: translate3d(0, 0, 0);
-	transform: translate3d(0, 0, 0);
-}
-
-.fp-slidesNav.bottom {
-	bottom: 17px;
-}
-
-.fp-slidesNav.top {
-	top: 17px;
-}
-
-#fp-nav ul, .fp-slidesNav ul {
-	margin: 0;
-	padding: 0;
-}
-
-#fp-nav ul li, .fp-slidesNav ul li {
+#fp-nav ul li {
 	display: block;
-	width: 14px;
-	height: 13px;
+	width: 25px;
+	height: 25px;
 	margin: 35px 25px;
 	position: relative;
 }
 
-.fp-slidesNav ul li {
-	display: inline-block;
-}
-
-#fp-nav ul li a, 
-.fp-slidesNav ul li a {
+#fp-nav ul li a {
 	display: block;
 	position: relative;
-	z-index: 1;
 	width: 100%;
 	height: 100%;
-	cursor: pointer;
-	text-decoration: none;
-}
-
-#fp-nav ul li a.active span, 
-.fp-slidesNav ul li a.active span, 
-#fp-nav ul li:hover a.active span, 
-.fp-slidesNav ul li:hover a.active span {
-	background: $red;
-	height: 12px;
-	width: 12px;
-	margin: -6px 0 0 -6px;
-	border-radius: 100%;
-}
-
-#fp-nav ul li a span, 
-.fp-slidesNav ul li a span {
-	background: $white;
-	border-radius: 50%;
-	position: absolute;
 	z-index: 1;
-	height: 6px;
-	width: 6px;
+}
+
+#fp-nav ul li a span {
+	background: $white;
+	position: absolute;
+	height: 5px;
+	width: 5px;
 	border: 0;
 	left: 50%;
 	top: 50%;
+	z-index: 1;
 	margin: -2px 0 0 -2px;
-	-webkit-transition: all 0.1s ease-in-out;
-	-moz-transition: all 0.1s ease-in-out;
-	-o-transition: all 0.1s ease-in-out;
-	transition: all 0.1s ease-in-out;
+	@include border-radius(50%);
+	@include transition-property(all);
+	@include transition-duration(0.1s);
+	@include transition-timing-function(linear);
 }
 
-#fp-nav ul li:hover a span, 
-.fp-slidesNav ul li:hover a span {
+#fp-nav ul li:hover a span,
+#fp-nav ul li a.active span, 
+#fp-nav ul li:hover a.active span {
 	background: $red;
-	width: 10px;
-	height: 10px;
-	margin: -5px 0px 0px -5px;
+	height: 25px;
+	width: 25px;
+	margin: -11px 0 0 -11px;
+	border-radius: 100%;
 }
 
 
@@ -231,33 +186,31 @@ html.fp-enabled, .fp-enabled body {
 
 #fp-nav ul li .fp-tooltip {
 	color: $white;
+	display: block;
+	cursor: pointer;
 	font-size: 14px;
 	font-weight: 700;
 	position: absolute;
-	top: -6px;
-	white-space: nowrap;
-	display: block;
-	cursor: pointer;
+	top: -2px;
 	opacity: 0.5;
 	width: auto;
 	max-width: 220px;
+	padding-left: 60px;
+	white-space: nowrap;
 	text-transform: uppercase;
 }
 
 #fp-nav ul li:hover .fp-tooltip, 
 #fp-nav.fp-show-active a.active+.fp-tooltip {
-	-webkit-transition: opacity 0.2s ease-in;
-	transition: opacity 0.2s ease-in;
 	width: auto;
 	opacity: 1;
-}
-
-#fp-nav ul li .fp-tooltip.right {
-	right: 20px;
+	@include transition-property(opacity);
+	@include transition-duration(0.2s);
+	@include transition-timing-function(ease-in);
 }
 
 #fp-nav ul li .fp-tooltip.left {
-	left: 20px;
+	left: 0;
 }
 
 /* Height
