--- a/sass/responsive/_tablet.scss
+++ b/sass/responsive/_tablet.scss
@@ -44,16 +44,16 @@
 	-------------------------------------*/
 
 	.section-header {
-		padding: 60px 35px 0;
+		padding: 60px 25px 0;
 	}
 
 	.section-content {
-		padding: 30px 65px 30px 35px;
+		padding: 30px 25px;
 		margin-left: 10% !important;
 	}
 
 	figure.columns {
-		padding: 0 35px;
+		padding: 0 25px;
 		margin: 30px 0;
 	}
 	
