--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -3,7 +3,16 @@
 ------------------------------------*/
 
 @media only screen and (max-width:520px) {
+
+	h1 {
+	  font-size: 24px;
+	  line-height: 40px;
+	  letter-spacing: 3px;
+	}
 	
+	.section-content {
+		margin-left: 0 !important;
+	}
 	
 
 }
