--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -9,6 +9,10 @@
 	  line-height: 40px;
 	  letter-spacing: 3px;
 	}
+
+	.section-header {
+		text-align: center
+	}
 	
 	.section-content {
 		margin-left: 0 !important;
