--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -67,7 +67,7 @@ strong {
 
 .site-logo {
 	text-align: right;
-	padding: 60px 0;
+	padding: 60px 25px;
 	z-index: 10;
 
 	img {
@@ -126,7 +126,7 @@ figure {
 }
 
 .hero-content {
-	padding-top: 65px;
+	padding-top: 25px;
 	z-index: 10;
 
 	h1 {
