--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -18,5 +18,26 @@
 		margin-left: 0 !important;
 	}
 	
+	.contact-info {
+		text-align: center;
+
+		li {
+		  margin-bottom: 45px;
+		  min-height: 0;
+		}
+
+		li:before {
+			display: block;
+	    position: relative;
+	    top: 0;
+	    left: 0;
+	    margin: 0 auto 25px;
+		}
+	}
+
+	.button {
+		display: block;
+		margin: 60px auto 0;
+	}
 
 }
